<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>fvarrui.reviser</groupId>
	<artifactId>Reviser</artifactId>
	<version>0.5.3</version>

	<name>Reviser</name>
	<description>Asistente para la corrección de entregas realizadas en un aula virtual Moodle.</description>

	<properties>
		<maven.compiler.target>17</maven.compiler.target>
		<maven.compiler.source>17</maven.compiler.source>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<exec.mainClass>io.github.fvarrui.reviser.Main</exec.mainClass>
		<javafx.version>17.0.1</javafx.version>
	</properties>

	<dependencies>
		<!-- gson for javafx -->
		<dependency>
			<groupId>org.hildan.fxgson</groupId>
			<artifactId>fx-gson</artifactId>
			<version>4.0.1</version>			
			<exclusions>
				<exclusion>
					<groupId>org.openjfx</groupId>
					<artifactId>javafx-base</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.openjfx</groupId>
					<artifactId>javafx-graphics</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- javafx -->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-swing</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<!-- git library -->
		<dependency>
			<groupId>org.eclipse.jgit</groupId>
			<artifactId>org.eclipse.jgit</artifactId>
			<version>6.6.1.202309021850-r</version>
		</dependency>
		<!-- maven library -->
		<dependency>
			<groupId>org.apache.maven.shared</groupId>
			<artifactId>maven-invoker</artifactId>
			<version>3.1.0</version>
		</dependency>
		<!-- logging -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>2.0.0-alpha6</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-nop</artifactId>
			<version>2.0.0-alpha6</version>
		</dependency>
		<!-- common utils -->
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.6</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.11.0</version>
		</dependency>
		<!-- running system commands -->
		<dependency>
			<groupId>org.codehaus.plexus</groupId>
			<artifactId>plexus-utils</artifactId>
			<version>3.4.1</version>
		</dependency>
		<!-- managing csv files -->
		<dependency>
			<groupId>com.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>5.6</version>
		</dependency>
		<!-- javafx components -->
		<dependency>
			<groupId>org.controlsfx</groupId>
			<artifactId>controlsfx</artifactId>
			<version>11.1.1</version>
		</dependency>
		<!-- javafx icons --> 
		<dependency>
			<groupId>org.kordamp.ikonli</groupId>
			<artifactId>ikonli-javafx</artifactId>
			<version>12.3.0</version>
		</dependency>
		<dependency>
			<!-- available icons list: http://kordamp.org/ikonli/cheat-sheet-fontawesome5.html -->
			<groupId>org.kordamp.ikonli</groupId>
			<artifactId>ikonli-fontawesome5-pack</artifactId>
			<version>12.3.0</version>
		</dependency>
		<!-- compressed files -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-compress</artifactId>
			<version>1.21</version>
		</dependency>		
		<dependency>
			<groupId>com.github.junrar</groupId>
			<artifactId>junrar</artifactId>
			<version>7.4.1</version>
		</dependency>
		<dependency>
			<groupId>org.tukaani</groupId>
			<artifactId>xz</artifactId>
			<version>1.9</version>
		</dependency>
		<dependency>
			<groupId>net.lingala.zip4j</groupId>
			<artifactId>zip4j</artifactId>
			<version>2.10.0</version>
		</dependency>
		<!-- project comparison -->
		<dependency>
			<groupId>io.github.fvarrui</groupId>
			<artifactId>VultureHunter</artifactId>
			<version>0.3.0</version>
		</dependency>
		<!-- access microsoft windows credentials vault -->
		<dependency>
			<groupId>com.microsoft.alm</groupId>
			<artifactId>auth-secure-storage</artifactId>
			<version>0.6.4</version>
		</dependency>
		<!-- http client -->
		<dependency>
			<groupId>com.squareup.okhttp3</groupId>
			<artifactId>okhttp</artifactId>
			<version>4.10.0</version>
		</dependency>
	</dependencies>

	<repositories>
		<repository>
			<id>jgit</id>
			<url>https://repo.eclipse.org/content/groups/releases</url>
		</repository>
	</repositories>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>**/version.properties</include>
				</includes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>false</filtering>
				<excludes>
					<exclude>**/version.properties</exclude>
				</excludes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<mainClass>${exec.mainClass}</mainClass>
					<arguments>
						<argument>-Djavafx.cachedir=${user.home}/.Reviser</argument>
					</arguments>
				</configuration>
			</plugin>
			<plugin>
				<groupId>io.github.fvarrui</groupId>
				<artifactId>javapackager</artifactId>
				<version>1.6.7</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>package</goal>
						</goals>
						<configuration>
							<bundleJre>true</bundleJre>
							<customizedJre>false</customizedJre>
							<organizationName>Francisco Vargas Ruiz</organizationName>
							<organizationUrl>https://github.com/fvarrui</organizationUrl>
							<createZipball>true</createZipball>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>